Fix NavBar visibility Before

--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -19,7 +19,7 @@
     inset 0 -2px 5px rgba(255, 255, 255, 0.05),
     0 5px 15px rgba(255, 255, 255, 0.1),
     0 2px 4px rgba(255, 255, 255, 0.15);
-  overflow: visible;
+  overflow: hidden;
   position: fixed; 
   bottom: 0;
   left: 50%; 
